fixed metamenu active state / removed padding in footerwidgetcol3 element in mobile view / reset carousel image dimensions (reset behaviour like before block-cover tests /  added date filed for news posts list / added dots for lists in content elements / fixed jumping of menu on scroll down

--- a/hotelgaedi/src/scss/_footer.scss
+++ b/hotelgaedi/src/scss/_footer.scss
@@ -82,6 +82,9 @@ footer {
       @include media($until: 'lg') {
         margin-top: toRem(30);
       }
+      @include media($until: 'md') {
+        padding: 0;
+      }
       .widget_text {
         padding-top: toRem(20);
       }
