--- a/hotelgaedi/src/scss/_gaedi_custom-posttype-filtered-list.scss
+++ b/hotelgaedi/src/scss/_gaedi_custom-posttype-filtered-list.scss
@@ -107,7 +107,6 @@
           margin-bottom: toRem(10);
         }
       }
-
       .wp-block-post-title {
         margin-top: toRem(40);
         @include media($until: 'lg') {
@@ -115,6 +114,15 @@
           margin-bottom: 0;
         }
       }
+      .wp-block-post-date {
+        + .wp-block-post-title {
+          margin-top: toRem(5);
+          @include media($until: 'lg') {
+            margin-bottom: 0;
+          }
+        }
+      }
+
       .wp-block-post-excerpt {
         margin-bottom: toRem(30);
       }
