--- a/hotelgaedi/src/scss/_metamenu.scss
+++ b/hotelgaedi/src/scss/_metamenu.scss
@@ -68,6 +68,12 @@
           }
         }
       }
+      &.current-menu-item {
+        > a {
+          color: white;
+          background-color: $gaedi-brown;
+        }
+      }
     }
   }
 }
